intro section done

--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <script src="./assets/script.js"></script>
 </head>
 <body>
-    <section class="homescreen">
+    <h4 id="timer-div">Timer: <span id="timer"> </span></h4>
 
+    <section class="homescreen">
+        <div class="welcome">
+            <div class="Quiz">
+                <h1>Coding Quiz Challenge!</h1>
+            </div>
+            <div class="para">
+                <p>
+                    This quiz will test your javascript knowledge with 
+                    a series of multiple choice questions. If you get a
+                    question wrong, your time will be decreased by 10 seconds.
+                    Do your best and good luck! 
+                </p>
+            </div>
+        <button id="start">Begin</button>
+        </div>
     </section>
+
+
 
     <section class="questions">
-
+        
     </section>
+
+
 
     <section class="results">
 
