--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/style.css">
-    <script src="./assets/script.js"></script>
+    
 </head>
 <body>
     <h4 id="timer-div">Timer: <span id="timer"> </span></h4>
@@ -23,7 +23,7 @@
                     Do your best and good luck! 
                 </p>
             </div>
-        <button id="start">Begin</button>
+        <button id="begin">Begin</button>
         </div>
     </section>
 
@@ -41,4 +41,5 @@
 
 
 </body>
+<script src="./assets/script.js"></script>
 </html>
