starting on the questions now, figured out the display property: none for the intro section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h4 id="timer-div">Timer: <span id="timer"> </span></h4>
 
-    <section class="homescreen">
+    <section id="homescreen">
         <div class="welcome">
             <div class="Quiz">
                 <h1>Coding Quiz Challenge!</h1>
@@ -29,13 +29,30 @@
 
 
 
-    <section class="questions">
-        
+    <section id="questionOne">
+        <h1>Question 1</h1>
+    </section>
+
+    <section id="questionTwo">
+        <h1>Question 2</h1>
+    </section>
+
+    <section id="questionThree">
+        <h1>Question 3</h1>
+    </section>
+
+    <section id="questionFour">
+        <h1>Question 4</h1>
+    </section>
+
+    <section id="questionFive">
+        <h1>Question 5</h1>
     </section>
 
 
 
-    <section class="results">
+
+    <section id="results">
 
     </section>
 
