working code for display properties **fixed

--- a/index.html
+++ b/index.html
@@ -30,29 +30,12 @@
 
 
     <section id="questionOne">
-        <h1>Question 1</h1>
-    </section>
-
-    <section id="questionTwo">
-        <h1>Question 2</h1>
-    </section>
-
-    <section id="questionThree">
-        <h1>Question 3</h1>
-    </section>
-
-    <section id="questionFour">
-        <h1>Question 4</h1>
-    </section>
-
-    <section id="questionFive">
-        <h1>Question 5</h1>
+        <h1>Works!</h1>
     </section>
 
 
 
-
-    <section id="results">
+    <section class="results">
 
     </section>
 
