fixed element names for js

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
 
 
 
-    <section id="questionOne">
+    <section id="first">
         <h1>Works!</h1>
+        <button>Answer 1</button>
+        <button>Answer 2</button>
+        <button>Answer 3</button>
+        <button>Answer 4</button>
     </section>
 
 
