fixed position and style for question 1

--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
 
 
     <section id="first">
-        <h1>Works!</h1>
-        <button>Answer 1</button>
-        <button>Answer 2</button>
-        <button>Answer 3</button>
-        <button>Answer 4</button>
+        <h1>blah blah blah blah blah blah blah blah blah blah blah blah 
+            blah blah
+        </h1>
+        <ul>
+            <li><button>blah blah blah blah blah blah blah</button></li>
+            <li><button>blah blah blah blah blah blah blah</button></li>
+            <li><button>blah blah blah blah blah blah blah</button></li>
+            <li><button>blah blah blah blah blah blah blah</button></li>
+        </ul>
+
+        
     </section>
 
 
