--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <h4 id="timer-div">Timer: <span id="timer"> </span></h4>
+    <h4 id="timer-div">Time Left: <span id="timer"> </span></h4>
 
     <section id="homescreen">
         <div class="welcome">
@@ -92,7 +92,6 @@
     <section id="results">
         <h1>Results!</h1>
         <h3>Score: <span id="fill">fill</span></h3>
-        <button id="startOver">Start Over</button>
     </section>
 
 
