--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <h4 id="timer-div">Time Left: <span id="timer"> </span></h4>
+    <h4 id="timer-div">Time: <span id="timer">60</span> </h4>
 
     <section id="homescreen">
         <div class="welcome">
@@ -42,7 +42,7 @@
 
 <!-- Question 2 ------------------------------------------------------->
     <section id="second" class="questionClass">
-        <h1>Q2: Which method is used to add an element to the end of an array"
+        <h1>Q2: Which method is used to add an element to the end of an array?
         </h1>
         <ul>
             <li><button id="q2incorrect1">.unshift()</button></li>
@@ -57,10 +57,10 @@
         <h1>Q3: What is the correct way to evaluate if two variables are equal in type AND value?
         </h1>
         <ul>
-            <li><button id="q3incorrect1">=</button></li>
-            <li><button id="q3correct">===</button></li>
-            <li><button id="q3incorrect2">!==</button></li>
-            <li><button id="q3incorrect3">==</button></li>
+            <li><button id="q3incorrect1">var1 = var2</button></li>
+            <li><button id="q3correct">var1 === var2</button></li>
+            <li><button id="q3incorrect2">var1 !== var2</button></li>
+            <li><button id="q3incorrect3">var1 == var2</button></li>
         </ul>
     </section>
 
