finished results page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><button id="q1incorrect2">"55"</button></li>
             <li><button id="q1incorrect3">Error</button></li>
         </ul>
+
     </section>
 
 <!-- Question 2 ------------------------------------------------------->
@@ -92,6 +93,9 @@
     <section id="results">
         <h1>Results!</h1>
         <h3>Score: <span id="fill">fill</span></h3>
+        <h4>Enter your initials:</h4>
+        <input type="text" placeholder="ie 'JL'" id="nameInput">
+        <button id="submitButton">Submit</button>
     </section>
 
 
