final commit, everything works

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <h4>Enter your initials:</h4>
         <input type="text" placeholder="ie 'JL'" id="nameInput">
         <button id="submitButton">Submit</button>
+        <button id="startOver">Start Over?</button>
     </section>
 
 
