--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="homescreen">
         <div class="welcome">
             <div class="Quiz">
-                <h1>Coding Quiz Challenge!</h1>
+                <h1>JavaScript Quiz!</h1>
             </div>
             <div class="para">
                 <p>
@@ -98,17 +98,6 @@
         <button id="submitButton">Submit</button>
         <button id="startOver">Start Over?</button>
     </section>
-
-
-
-
-
-
-
-
-
-
-
 </body>
 <script src="./assets/script.js"></script>
 </html>
