--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             <div class="para">
                 <p>
                     This quiz will test your javascript knowledge with 
-                    a series of multiple choice questions. If you get a
+                    a series of multiple choice questions. When you answer
+                    a question you will be alerted telling you if you were
+                    correct or incorrect and the timer will temporarily stop
+                    until moving on to the next question. If you get a
                     question wrong, your time will be decreased by 10 seconds.
                     Do your best and good luck! 
                 </p>
